<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#20BDFCC9"
    tools:context=".HexAtomGUIActivity" >

    <RadioGroup
        android:id="@+id/SelectorGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/genA0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom0"
            android:textOn = "0"
            android:textOff = "0"/>

        <ToggleButton
            android:id="@+id/genA1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom1"
            android:textOn = "1"
            android:textOff = "1"/>

        <ToggleButton
            android:id="@+id/genA2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom2"
            android:textOn = "2"
            android:textOff = "2"/>

        <ToggleButton
            android:id="@+id/genA3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom3"
            android:textOn = "3"
            android:textOff = "3"/>

        <ToggleButton
            android:id="@+id/genA4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom4"
            android:textOn = "4"
            android:textOff = "4"/>

        <ToggleButton
            android:id="@+id/genA5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom5"
            android:textOn = "5"
            android:textOff = "5"/>

        <ToggleButton
            android:id="@+id/genA6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom6"
            android:textOn = "6"
            android:textOff = "6"/>

        <ToggleButton
            android:id="@+id/genA7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom7"
            android:textOn = "7"
            android:textOff = "7"/>

        <ToggleButton
            android:id="@+id/genA8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom8"
            android:textOn = "8"
            android:textOff = "8"/>

        <ToggleButton
            android:id="@+id/genA9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom9"
            android:textOn = "9"
            android:textOff = "9"/>

        <ToggleButton
            android:id="@+id/genA10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom10"
            android:textOn = "10"
            android:textOff = "10"/>

        <ToggleButton
            android:id="@+id/genA11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Atom11"
            android:textOn = "11"
            android:textOff = "11"/>

        <ToggleButton
            android:id="@+id/genDiameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Diameter"
            android:textOn = "Diameter"
            android:textOff = "Diameter"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/CenterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    </LinearLayout>

    <View
        android:id="@+id/MapView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/circle"
        android:layout_toEndOf="@+id/SelectorGroup"
        android:layout_below="@+id/TempoBar"
        android:layout_toRightOf="@+id/SelectorGroup"
        android:layout_marginLeft="30dp" />

    <com.hexatom.gui.hexatomgui.AtomSeekBar
        android:id="@+id/TempoBar"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />


    <View
        android:id="@+id/SwipeGestureView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TempoBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <GridLayout
        android:layout_width="275dp"
        android:layout_height="250dp"
        android:id="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/SwipeGestureView"
        android:layout_toStartOf="@+id/SwipeGestureView"
        android:layout_marginRight="38dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_row="0"
            android:layout_column="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Rotation"
                android:id="@+id/textView" />

            <com.hexatom.gui.hexatomgui.RoundKnobButton
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/view"
                android:layout_above="@+id/CenterLayout"
                android:layout_alignLeft="@+id/CenterLayout">

            </com.hexatom.gui.hexatomgui.RoundKnobButton>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="38dp"
                android:layout_height="44dp"
                android:background="@drawable/border"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="125dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Quantum"
                android:id="@+id/textView2" />

            <com.hexatom.gui.hexatomgui.RoundKnobButton
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/Q"
                android:layout_alignTop="@+id/CenterLayout"
                android:layout_toRightOf="@+id/MapView">

            </com.hexatom.gui.hexatomgui.RoundKnobButton>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="38dp"
                android:layout_height="44dp"
                android:background="@drawable/border"
                android:gravity="center" />
        </LinearLayout>

    </GridLayout>

    <GridLayout
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:id="@+id/gridLayout2"
        android:layout_below="@+id/gridLayout"
        android:layout_alignLeft="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_row="1"
            android:layout_column="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Erasure"
                android:id="@+id/textView3" />

            <com.hexatom.gui.hexatomgui.RoundKnobButton
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/E"
                android:layout_alignTop="@+id/CenterLayout"
                android:layout_toRightOf="@+id/MapView">

            </com.hexatom.gui.hexatomgui.RoundKnobButton>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="38dp"
                android:layout_height="44dp"
                android:background="@drawable/border"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="125dp"
            android:layout_height="fill_parent"
            android:layout_row="1"
            android:layout_column="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Tempo"
                android:id="@+id/textView4" />

            <com.hexatom.gui.hexatomgui.RoundKnobButton
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/T"
                android:layout_alignTop="@+id/CenterLayout"
                android:layout_toRightOf="@+id/MapView">

            </com.hexatom.gui.hexatomgui.RoundKnobButton>

            <TextView
                android:id="@+id/TempoProgress"
                android:layout_width="38dp"
                android:layout_height="44dp"
                android:background="@drawable/border"
                android:gravity="center" />
        </LinearLayout>
    </GridLayout>

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_toEndOf="@+id/SelectorGroup"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/SelectorGroup"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/SendDiameterButton"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>
